  - Now that (since long) the library version is a constant, it can be passed
    to the constructor of Log, instead of setting it when the Config has been
    created.
  - Meta tags renamed to make them more consistent.
  - Form::addWarningMessage() renamed to Form::addWarningMessages().
  - Form::addErrorMessage() renamed to Form::addErrorMessages().
  - Property source 'originalInvoiceSource' renamed to order.
  - Property source 'refund' added.
  - Refactored ShopCapabilities::getTokenInfo().
- ALL: Continued adding extensive overview documentation aimed at developers
  that want to create a new extension on their own based on this library.
- ALL: As part of the developers documentation: added a MyWebShop namespace
  containing "template" code that can be used when developing a new extension
  based on this library.

5.4.0 (2018-04-17)
------------------
- MA: main.CRITICAL: Exception message: SQLSTATE[23000]: Integrity constraint
  violation: 1062 Duplicate entry.
- MA2: Fatal error: Call to undefined method Creator::getSign().
- ALL: Added extensive overview documentation aimed at developers that want to
  create a new extension on their own based on this library.
- ALL: As a consequence of documenting this library from a developers view
  point, simplifications were made to the code by removing interfaces in favor
  of the base class that implements that interface:
  - Removed TranslatorInterface
  - Removed ContainerInterface
  - Removed ConfigStoreInterface
  - Removed ConfigInterface
  - Removed ShopCapabilitiesInterface
  - Removed CommunicatorInterface
- ALL: As a consequence of documenting this library from a developers view
  point, non backwards compatible changes were made that simplify or reduce the
  amount of code that needs to be written when developing a new extension:
  - ConfigStore was simplified, it now only should store the one array value as
    passed in.
  - Order of constructor parameters changed to make it consistent among the