@@ -1,27 +1,0 @@
-<?php
-namespace Siel\Acumulus\OpenCart\Shop;
-
-use Siel\Acumulus\OpenCart\Helpers\Registry;
-use Siel\Acumulus\Shop\BatchForm as BaseBatchForm;
-
-/**
- * Provides the Batch send form handling for the OpenCart Acumulus module.
- */
-class BatchForm extends BaseBatchForm
-{
-    /**
-     * {@inheritdoc}
-     */
-    public function isSubmitted()
-    {
-        return $this->getRequest()->server['REQUEST_METHOD'] == 'POST';
-    }
-
-    /**
-     * return \Request
-     */
-    private function getRequest()
-    {
-        return Registry::getInstance()->request;
-    }
-}
