@@ -1,12 +1,7 @@
 <?php
 namespace Siel\Acumulus\PrestaShop\Shop;
 
-use Siel\Acumulus\Config\Config;
-use Siel\Acumulus\Config\ShopCapabilities;
-use Siel\Acumulus\Helpers\Translator;
 use Siel\Acumulus\Shop\AdvancedConfigForm as BaseAdvancedConfigForm;
-use Siel\Acumulus\Web\Service;
-use Tools;
 
 /**
  * Class ConfigForm processes and builds the settings form page for the
@@ -16,16 +11,6 @@ class AdvancedConfigForm extends BaseAdvancedConfigForm
 {
     /** @var string */
     protected $moduleName = 'acumulus';
-
-    /**
-     * {@inheritdoc}
-     *
-     * This override uses the PS way of checking if a form is submitted.
-     */
-    public function isSubmitted()
-    {
-        return Tools::isSubmit('submitAdd');
-    }
 
     /**
      * {@inheritdoc}
