@@ -4,6 +4,7 @@ namespace Siel\Acumulus\Shop;
 use Siel\Acumulus\Config\Config;
 use Siel\Acumulus\Config\ShopCapabilities;
 use Siel\Acumulus\Helpers\Form;
+use Siel\Acumulus\Helpers\FormHelper;
 use Siel\Acumulus\Helpers\Translator;
 use Siel\Acumulus\Tag;
 use Siel\Acumulus\Web\Result;
@@ -13,8 +14,6 @@ use Siel\Acumulus\Web\Service;
  * Provides basic config form handling.
  *
  * Shop specific may optionally (have to) override:
- * - systemValidate()
- * - isSubmitted()
  * - setSubmittedValues()
  * - getPostedValues()
  */
@@ -35,13 +34,14 @@ abstract class BaseConfigForm extends Form
      * Constructor.
      *
      * @param \Siel\Acumulus\Web\Service $service
+     * @param \Siel\Acumulus\Helpers\FormHelper $formHelper
      * @param \Siel\Acumulus\Config\ShopCapabilities $shopCapabilities
      * @param \Siel\Acumulus\Config\Config $config
      * @param \Siel\Acumulus\Helpers\Translator $translator
      */
-    public function __construct(Service $service, ShopCapabilities $shopCapabilities, Config $config, Translator $translator)
+    public function __construct(Service $service, FormHelper $formHelper, ShopCapabilities $shopCapabilities, Config $config, Translator $translator)
     {
-        parent::__construct($shopCapabilities, $config, $translator);
+        parent::__construct($formHelper, $shopCapabilities, $config, $translator);
 
         $translations = new ConfigFormTranslations();
         $this->translator->add($translations);
